<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>

    <string name="recent_search_title">Recent searches</string>

    <string name="search_loading_message">Searching\u2026</string>

    <string name="search_chip_contextual">in: %s</string>
    <string name="search_chip_files">Files</string>
    <string name="search_chip_folders">Folders</string>
    <string name="search_chip_libraries">Libraries</string>

    <string name="search_empty_title">Oops!</string>
    <string name="search_empty_message">We can’t find the file\nyou’re looking for.</string>

    <string name="advance_search_title">Advance search</string>
    <string name="default_search">Default</string>
    <string name="component_action_reset">Reset</string>
    <string name="component_action_apply">Apply</string>
    <string name="component_action_cancel">Cancel</string>
    <string name="app.search.radio.none">None</string>
    <string name="app.search.radio.all">All</string>
    <string name="app.search.radio.folder">Folder</string>
    <string name="app.search.radio.document">Document</string>
    <string name="component_number_range_empty">Required value</string>
    <string name="component_number_range_invalid_input">From value should be less than To value</string>
    <string name="hint_range_from">From</string>
    <string name="hint_range_to">To</string>
    <string name="date_format" translatable="false">%1$s-%2$s-%3$s</string>
    <string name="name_truncate_end" translatable="false">%1$s...</string>
    <string name="label_count_format_integer" translatable="false">%1$s (%2$d)</string>
    <string name="label_count_format_string" translatable="false">%1$s (%2$s)</string>

    <string name="search.facet_fields.size">File Size</string>
    <string name="search.facet_fields.created">Created Date</string>
    <string name="search.facet_fields.type">File Type</string>
    <string name="search.facet_fields.modifier">Modifier</string>
    <string name="search.facet_fields.creator">Creator</string>
    <string name="hint_range_from_date">From Date</string>
    <string name="hint_range_to_date">To Date</string>
    <string name="name_truncate_in" translatable="false">%1$s ... %2$s</string>
    <string name="name_truncate_in_end" translatable="false">%1$s + %2$d</string>


    <string name="size.facet.queries">Size facet queries</string>
    <string name="search.facet_queries.medium">Medium</string>
    <string name="search.facet_queries.large">Large</string>
    <string name="search.facet_queries.small">Small</string>
    <string name="search.facet_queries.xtrasmall">Extra Small</string>
    <string name="search.facet_queries.xtralarge">Extra Large</string>
    <string name="search.facet_queries.xxtralarge">Extra Extra Large</string>
    <string name="earlier">Earlier</string>
    <string name="lastYear">Last Year</string>
    <string name="currentyear">Current Year</string>
    <string name="search.facet_queries.created_this_year">This Year</string>
    <string name="search.facet_queries.mimetype">MIME Type</string>
    <string name="the.created.mobileapps">Created Year</string>
    <string name="the.modified.mobileapps">Modified Year</string>
    <string name="folder.size.mobileapps">Size</string>
    <string name="folder.created.mobileapps">Created Date</string>
    <string name="folder.creator.mobileapps">Creator</string>
    <string name="folder.modifier.mobileapps">Modifier</string>
    <string name="search.facet_queries.my_facet_queries">My Facet Queries</string>

    <!--Search Filters-->
    <string name="app.search.content.date.range">Created Date (range)</string>
    <string name="app.search.content.size">Content Size</string>
    <string name="app.search.radio.type">Type</string>
    <string name="app.search.file.name">File Name</string>
    <string name="app.search.text.placeholder">Enter the name</string>
    <string name="category.default.search">Default</string>
    <string name="category.folder">Folder</string>
    <string name="type.facet.queries">Type facet queries</string>
    <string name="size_end_kb">%1$s (KB)</string>
    <string name="search_move_warning">you cannot move to own and sub folders.</string>
</resources>
